--- a/public/resume.html
+++ b/public/resume.html
@@ -159,8 +159,9 @@
     <section class="section summary">
         <h2 class="section-title">Professional Summary</h2>
         <p>Results-driven Campaign Manager with 2+ years of experience in influencer marketing, creator partnerships,
-            and social media strategy. Proven track record of delivering high-impact campaigns achieving 100M+ reach and
-            2M+ engagements across Instagram, YouTube, X, and emerging platforms. Expertise in end-to-end campaign
+            and social media strategy. Proven track record of delivering high-impact campaigns achieving 1000M+ reach
+            and
+            80M+ engagements across Instagram, YouTube, X, and emerging platforms. Expertise in end-to-end campaign
             management, performance analytics, and cross-functional collaboration.</p>
     </section>
 
@@ -211,7 +212,7 @@
             </div>
             <ul class="experience-list">
                 <li>Launched campaigns that broke the internet: 100M+ reach, 2M+ engagements, 1M+ impressions</li>
-                <li>Built a creator network of 1500+ voices across tech, lifestyle, and entertainment</li>
+                <li>Built a creator network of 50+ voices across tech, lifestyle, and entertainment</li>
                 <li>Spotted trends before they peaked and turned them into viral moments</li>
                 <li>Managed multi-language campaigns across regions, making brands feel local everywhere</li>
             </ul>
