--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <title>Lakshay Rohilla | I Make Brands Go Viral</title>
   <meta name="description"
     content="Campaign Manager & Creator Relations Expert with 1000M+ reach and 80M+ engagements across social platforms.">
+  
+  <!-- Preconnect to Google Fonts for faster loading -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Preload critical fonts with display=swap to prevent FOUT -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Caveat:wght@400;500;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Hindi:wght@400&family=Playfair+Display:wght@400;700;900&family=Space+Mono:wght@400;700&family=Bebas+Neue&display=swap"
     rel="stylesheet">
 </head>
 
