perf: fix CLS 0.26 and LCP 2.82s - add image dimensions, font preload, aspect-ratio

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <title>Lakshay Rohilla | I Make Brands Go Viral</title>
   <meta name="description"
     content="Campaign Manager & Creator Relations Expert with 1000M+ reach and 80M+ engagements across social platforms.">
-  
+
   <!-- Preconnect to Google Fonts for faster loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-  <!-- Preload critical fonts with display=swap to prevent FOUT -->
+
+  <!-- Preload critical font files for hero section (reduces LCP) -->
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Hindi:wght@400&family=Playfair+Display:wght@400;700;900&family=Space+Mono:wght@400;700&family=Bebas+Neue&display=swap">
+
   <link
     href="https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Hindi:wght@400&family=Playfair+Display:wght@400;700;900&family=Space+Mono:wght@400;700&family=Bebas+Neue&display=swap"
     rel="stylesheet">
